--- a/project.html/day7.html
+++ b/project.html/day7.html
@@ -52,8 +52,8 @@
           Whether it’s building a web app or designing a prototype, I bring both logic and creativity to every project.
         </p>
         <p style="margin-top: 15px;">
-          <i class="fa-solid fa-location-dot"></i> Based in Mumbai, India<br />
-          <i class="fa-solid fa-envelope"></i> <a href="mailto:pathansiddiq@gmail.com">pathansiddiq@gmail.com</a>
+          <i class="fa-solid fa-location-dot"></i> Based in Hyderabad, India<br />
+          <i class="fa-solid fa-envelope"></i> <a href="mailto:siddiqpathan601@gmail.com">siddiqpathan601@gmail.com</a>
         </p>
       </div>
     </div>
