--- a/Myportfolio.html
+++ b/Myportfolio.html
@@ -17,7 +17,6 @@
             </ul>
         </nav>
     </header>
-    <hr>
     <H1>Welcome To My Portfolio</H1>
     <p><b>Hi, i'm Siddiq</b>
         <br>
@@ -27,9 +26,8 @@
     <section  id="About" class="About">
         <h2>About me</h2>
     <p>Im a passionate Web devloper who enjoy creating beautiful and funtional website.I specialize in HTML,CSS,JS,and more</p>
-</section>
-     
-    <hr>
+</section> 
+    <section id="Projects" class="Projects">
     <h2>Projects</h2>
     <h3>Weather App</h3>
     <p>Build a Weather App. A weather application can be created with HTML, CSS, and JavaScript</p>
@@ -37,9 +35,11 @@
     <p>An Expense Tracker logs income and expenses, showing totals and charts. This React project with source code is ideal for dynamic data handling</p>
     <h3>Portfolio site</h3>
     <p>Building a personal portfolio website tough basic front-end</p>
-    <hr>
+    </section>
+    <section id="Contact" class="c">
     <h3>Contact</h3>
-    <p>Email :siddiqpathan601@gmail.com</p>
+    <p>Email :siddiqpathan 601@gmail.com</p>
     <p>Mobile No :9347969685</p>
+    </section>
 </body>
 </html>
